# RVC-inference

./: .env  .gitignore  MIT协议暨相关引用库协议  README.md  pyproject.toml  requirements.txt
docs/: README.ch.md  README.fr.md  README.ja.md  README.ko.md  README.tr.md
inferrvc/: __init__.py  modules.py  pipeline.py  rmvpe.py
inferrvc/.ipynb_checkpoints/: modules-checkpoint.py
inferrvc/configs/: config.py
inferrvc/configs/.ipynb_checkpoints/: config-checkpoint.py
inferrvc/faiss/: __init__.py  loader.py  setup.py  swigfaiss.py  swigfaiss_avx2.py
inferrvc/faiss/contrib/: client_server.py  datasets.py  evaluation.py  exhaustive_search.py  inspect_tools.py  ivf_tools.py  rpc.py  torch_utils.py
